[package]
name = "jobcan"
version = "0.1.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
description = "ジョブカン CLI"

[dependencies]
headless_chrome = { git = "https://github.com/ksk001100/rust-headless-chrome", branch = "feature/add-wait-for-url" }
failure = "0.1.7"
seahorse = "1.1"
spinners = "1.2.0"
chrono = "0.4"
